Sculpt Redo does not always properly apply the first stroke of the sculpt session #82532

Closed
opened 2020-11-09 12:42:29 +01:00 by Bastien Montagne · 13 comments

Broken: At least 2.83, 2.90, 2.91, current master.
Worked: ???

When starting from File -> New -> Sculpting, draw two strokes, undo twice to go back to starting sphere, redo once (nothing happens), redo again (both first strokes re-appear simultaneously).

Note that this is not reproducible when using default startup, and then switching to Sculpt mode.

I believe this is because in the first case, initial undo step (memfile one) has active object already in Sculpt mode, and the first Sculpt undo step is actually stored for the first stroke.
Conversely, when switching to Sculpt mode from Object mode, that switch itself is stored as a Sculpt undo step, and the first stroke is the second Sculpt undo step.

Further investigation is needed though.

Broken: At least 2.83, 2.90, 2.91, current master. Worked: ??? When starting from `File -> New -> Sculpting`, draw two strokes, undo twice to go back to starting sphere, redo once (*nothing happens*), redo again (*both first strokes re-appear simultaneously*). Note that this is not reproducible when using default startup, and then switching to Sculpt mode. I believe this is because in the first case, initial undo step (memfile one) has active object already in Sculpt mode, and the first Sculpt undo step is actually stored for the first stroke. Conversely, when switching to Sculpt mode from Object mode, that switch itself is stored as a Sculpt undo step, and the first stroke is the second Sculpt undo step. Further investigation is needed though.
Author
Owner

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Author
Owner

Added subscriber: @mont29

Added subscriber: @mont29

#85817 was marked as duplicate of this issue

#85817 was marked as duplicate of this issue

#84470 was marked as duplicate of this issue

#84470 was marked as duplicate of this issue

#82851 was marked as duplicate of this issue

#82851 was marked as duplicate of this issue

Added subscriber: @rjg

Added subscriber: @rjg

We already have ticket #82388, should that ticket be merged into this one?

We already have ticket #82388, should that ticket be merged into this one?
Author
Owner

@rjg If I created this one, it's precisely because it is another/different issue, that has been around for a long time it seems...

@rjg If I created this one, it's precisely because it is another/different issue, that has been around for a long time it seems...
Author
Owner
Added subscribers: @borschberry, @Gilberto.R, @mano-wii, @TheRedWaxPolice
Author
Owner

Added subscriber: @Foaly

Added subscriber: @Foaly

Added subscriber: @A.Lex_3D

Added subscriber: @A.Lex_3D

This issue was referenced by f0c3ec3dc8

This issue was referenced by f0c3ec3dc8bc0e361b47952bad105499a2d23fae

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Campbell Barton self-assigned this 2021-03-12 15:39:33 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#82532
No description provided.